--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.3",
     "ag-grid-react": "^31.2.1",
+    "bootstrap": "^5.3.3",
     "chart.js": "^4.4.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
